# commerce-assistance

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  commerce.db  demo.html  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: admin.py  chat.py  products.py  recommendations.py  routes.py
app/database/: database.py
app/models/: chat.py  product.py
app/services/: agent.py  agent_service.py  ai_service.py  context.py  recommendation_service.py  tool.py  vector.py  vector_store.py
data/: products_seed.json
data/faiss/: products.index  products_meta.json
